modified package.json, add valid homepage link and fixed deploy script, add gitignore file

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d ./"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/Kuba77/space_tourism/issues"
   },
-  "homepage": "https://github.com/Kuba77/space_tourism#readme"
+  "homepage": "https://kuba77.github.io/space_tourism/",
+  "dependencies": {
+    "gh-pages": "^3.2.3"
+  }
 }
